@@ -13,10 +13,19 @@ assistantJs.registerComponent(validationsDescriptor);
 In addition, you also have to set up the PromptState which is called every time an entity is missing. To do so, you can use our `PromptStateMixin`:
 
 ```typescript
-import { injectable, inject, unmanaged } from "inversify";
-import { State, EntityDictionary, CurrentSessionFactory, PlatformGenerator, injectionNames } from "assistant-source";
-import { PromptStateMixinRequirements, PromptStateMixin } from "assistant-validations";
-import { ApplicationState } from "./application";
+import {
+  BaseState,
+  BasicAnswerTypes,
+  BasicHandable,
+  CurrentSessionFactory,
+  EntityDictionary,
+  injectionNames,
+  PlatformGenerator,
+  State,
+} from "assistant-source";
+import { inject, injectable } from "inversify";
+import { PromptStateMixin, PromptStateMixinRequirements } from "../../../../src/assistant-validations";
+import { MergedSetupSet } from "../../config/handler";
 
 /**
  * This small class is needed to apply the PromptStateMixin since TypeScript does not allow type-specific constructor mixins.
@@ -25,10 +34,10 @@ import { ApplicationState } from "./application";
 @injectable()
 class PromptStateRequirements extends ApplicationState implements PromptStateMixinRequirements {
   constructor(
-    @unmanaged() stateSetupSet: State.SetupSet,
-    @unmanaged() public entities: EntityDictionary,
-    @unmanaged() public sessionFactory: CurrentSessionFactory,
-    @unmanaged() public mappings: PlatformGenerator.EntityMapping
+    stateSetupSet: MergedSetupSet,
+    public entities: EntityDictionary,
+    public sessionFactory: CurrentSessionFactory,
+    public mappings: PlatformGenerator.EntityMapping
   ) {
     super(stateSetupSet);
   }
@@ -37,7 +46,7 @@ class PromptStateRequirements extends ApplicationState implements PromptStateMix
 @injectable()
 export class PromptState extends PromptStateMixin(PromptStateRequirements) {
   constructor(
-    @inject(injectionNames.current.stateSetupSet) setupSet: State.SetupSet,
+    @inject(injectionNames.current.stateSetupSet) setupSet: MergedSetupSet,
     @inject(injectionNames.current.entityDictionary) entities: EntityDictionary,
     @inject(injectionNames.current.sessionFactory) sessionFactory: CurrentSessionFactory,
     @inject("core:unifier:user-entity-mappings") mappings: PlatformGenerator.EntityMapping
@@ -51,19 +60,18 @@ If you don't call your state PromptState, you will have to change the value of `
 
 ### Usage
 
-assistant-validations gives you the `@need` decorator to define which entities you need for a specific intent or state. For example, if you need the entity `target` in your
-`MainState` (as introduced in the [second chapter of the AssistantJS's viedeo tutorial][2]):
+assistant-validations gives you the `@need` decorator to define which entities you need for a specific intent or state. For example, if you need the entity `target` in your `MainState` (as introduced in the [second chapter of the AssistantJS's viedeo tutorial][2]):
 
 ```typescript
+import { ApplicationState } from "./application";
 import { injectionNames, State } from "assistant-source";
 import { needs } from "assistant-validations";
 import { injectable, inject } from "inversify";
-
-import { ApplicationState } from "./application";
+import { MergedSetupSet } from "../../config/handler";
 
 @injectable()
 export class MainState extends ApplicationState {
-  constructor(@inject(injectionNames.current.stateSetupSet) setupSet: State.SetupSet) {
+  constructor(@inject(injectionNames.current.stateSetupSet) setupSet: MergedSetupSet) {
     super(setupSet);
   }
 
@@ -74,16 +82,13 @@ export class MainState extends ApplicationState {
 }
 ```
 
-Now, everytime the `busRouteIntent` of your `MainState` is called, assistant-validations forces AssistantJS to check if the entity `target` is present. If not, it prompts for this
-entity and returns to the `busRouteIntent` as soon as the entity is given. This prompting is done by the set up `PromptState`.
+Now, everytime the `busRouteIntent` of your `MainState` is called, assistant-validations forces AssistantJS to check if the entity `target` is present. If not, it prompts for this entity and returns to the `busRouteIntent` as soon as the entity is given. This prompting is done by the set up `PromptState`.
 
-assistant-validations adds the `answerPromptIntent` to your intent dictionary, and also automatically adds utterances for it. The `answerPromptIntent` is triggered if the user responds
-with a plain entity value, for example if he or she answers with "train station" to the question: "where do you want to go to?".
+assistant-validations adds the `answerPromptIntent` to your intent dictionary, and also automatically adds utterances for it. The `answerPromptIntent` is triggered if the user responds with a plain entity value, for example if he or she answers with "train station" to the question: "where do you want to go to?".
 
 #### I18N integration
 
-All intent methods implemented in our [states/prompt.ts](src/components/validations/states/prompt.ts) make use of the [AssistantJS's i18n conventions][3]. To differ between multiple entity
-names, all `translateHelper` calls are appended by the prompted entity's name. For example, if you prompt for an entity name called "target", these rules would apply:
+All intent methods implemented in our [states/prompt.ts](src/components/validations/states/prompt.ts) make use of the [AssistantJS's i18n conventions][3]. To differ between multiple entity names, all `translateHelper` calls are appended by the prompted entity's name. For example, if you prompt for an entity name called "target", these rules would apply:
 
 | Intent                 | Description                                                                                                                                            | I18N key                                  |
 | ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------- |
@@ -115,18 +120,18 @@ Now, AssistantJS ensures that both `fromBusStop` and `toBusStop` are given befor
 Sometimes, you want to prompt for an entity based on some previous conditions. In that case, you can use our `promptFactory` to initialize a prompt whenever you need to:
 
 ```typescript
+import { ApplicationState } from "./application";
 import { injectionNames, State, Transitionable } from "assistant-source";
 import { needs, PromptFactory, Prompt, injectionNames as validationsInjectionNames } from "assistant-validations";
 import { injectable, inject } from "inversify";
-
-import { ApplicationState } from "./application";
+import { MergedSetupSet } from "../../config/handler";
 
 
 @injectable()
 export class MainState extends ApplicationState {
 
   constructor(
-    @inject(injectionNames.current.stateSetupSet) setupSet: State.SetupSet
+    @inject(injectionNames.current.stateSetupSet) setupSet: MergedSetupSet
     @inject(validationsInjectionNames.current.promptFactory) private currentPromptFactory: PromptFactory
   ) {
     super(setupSet);
@@ -156,11 +161,12 @@ If you need more flexibility, you can change the behaviour of your prompt state 
 import { State, EntityDictionary, CurrentSessionFactory, PlatformGenerator, injectionNames } from "assistant-source";
 import { PromptStateMixin } from "assistant-validations";
 import { injectable, inject } from "inversify";
+import { MergedSetupSet } from "../../config/handler";
 
 @injectable()
 export class PromptState extends PromptStateMixin(PromptStateRequirements) {
   constructor(
-    @inject(injectionNames.current.stateSetupSet) setupSet: State.SetupSet,
+    @inject(injectionNames.current.stateSetupSet) setupSet: MergedSetupSet,
     @inject(injectionNames.current.entityDictionary) entities: EntityDictionary,
     @inject(injectionNames.current.sessionFactory) sessionFactory: CurrentSessionFactory,
     @inject("core:unifier:user-entity-mappings") mappings: PlatformGenerator.EntityMapping
