@@ -12,12 +12,12 @@ import {
 import { inject, injectable } from "inversify";
 import { PromptStateMixin, PromptStateMixinRequirements } from "../../../../src/assistant-validations";
 
-class PromptStateRequirements<CustomTypes extends BasicAnswerTypes, CustomHandler extends BasicHandable<CustomTypes>> extends BaseState<
-  CustomTypes,
-  CustomHandler
+class PromptStateRequirements<MergedAnswerTypes extends BasicAnswerTypes, MergedHandler extends BasicHandable<MergedAnswerTypes>> extends BaseState<
+  MergedAnswerTypes,
+  MergedHandler
 > implements PromptStateMixinRequirements {
   constructor(
-    stateSetupSet: State.SetupSet<CustomTypes, CustomHandler>,
+    stateSetupSet: State.SetupSet<MergedAnswerTypes, MergedHandler>,
     public entities: EntityDictionary,
     public sessionFactory: CurrentSessionFactory,
     public mappings: PlatformGenerator.EntityMapping
@@ -27,11 +27,11 @@ class PromptStateRequirements<CustomTypes extends BasicAnswerTypes, CustomHandle
 }
 
 @injectable()
-export class PromptState<CustomTypes extends BasicAnswerTypes, CustomHandler extends BasicHandable<CustomTypes>> extends PromptStateMixin(
+export class PromptState<MergedAnswerTypes extends BasicAnswerTypes, MergedHandler extends BasicHandable<MergedAnswerTypes>> extends PromptStateMixin(
   PromptStateRequirements
-)<CustomTypes, CustomHandler> {
+)<MergedAnswerTypes, MergedHandler> {
   constructor(
-    @inject(injectionNames.current.stateSetupSet) setupSet: State.SetupSet<CustomTypes, CustomHandler>,
+    @inject(injectionNames.current.stateSetupSet) setupSet: State.SetupSet<MergedAnswerTypes, MergedHandler>,
     @inject(injectionNames.current.entityDictionary) entities: EntityDictionary,
     @inject(injectionNames.current.sessionFactory) sessionFactory: CurrentSessionFactory,
     @inject("core:unifier:user-entity-mappings") mappings: PlatformGenerator.EntityMapping
