@@ -1,5 +1,7 @@
 version 0.4.0
 - changes for new ResponseHandler with assistant-source 0.4.0
+  - `PromptStateRequirements` now uses `ApplicationState` instead of `BaseState`.
+  - `State.SetupSet` is replaced by `MergedSetupSet` introduced in assistant-source 0.4.0 (see changelog or new scaffolded project)
 
 version 0.3.0
 - makes assistant-validations compatible to assistant-source 0.3.0
